2007-07-10  Akira TAGOH  <at@gclab.org>

	* donrails/app/helpers/application_helper.rb
	(display_categories_roots_ul): Correct the controller.

2007-07-08  ARAKI Yasuhiro  <yasu@debian.or.jp>

	** 1.6.9.6
	* Makefile: Chage to link rails/db to donrails/db.
	* donrails/db: new entry. These are used at 'rake db:migrate'.

2007-07-06  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/donrails-setup.rb: fix installer using dirctory. (Thanks ay.)

	* INSTALL.ja : fix manage_don_env URL. (Thanks ay.)

2007-07-05  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/rdf_controller.rb : Change ':order_by' to ':order'. Because :order_by is deprecated.
	* donrails/app/controllers/admin/comment_controller.rb : likewise.
	* donrails/app/controllers/admin/picture_controller.rb : likewise.
	* donrails/app/controllers/admin/category_controller.rb : likewise.
	* donrails/app/controllers/admin/enrollment_controller.rb : likewise.
	* donrails/app/controllers/admin/article_controller.rb : likewise.
	* donrails/app/controllers/admin/trackback_controller.rb : likewise.
	* donrails/app/controllers/atom_controller.rb : likewise.
	* donrails/app/controllers/notes_controller.rb: likewise.

	* donrails/app/views/admin/system/manage_don_ping.rhtml: 

	* donrails/app/controllers/admin/system_controller.rb (Admin::manage_don_ping): Add function to sort.

2007-07-04  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* 1.6.9.4.
	** Plase update DB entry.
	* donrails/app/views/admin/system/manage_don_ping.rhtml: Add to show counter number.
	* donrails/tool/pingger/pingger.rb (Pingger::async_send): add new option (--defer_seconds=600). It controls ping re-send time.
	* upgrade_1_7.postgresql.sql: likewise.
	* upgrade_1_7.mysql.sql: likewise.
	* donrails/tool/tables-postgresql.sql: likewise.
	* donrails/tool/tables-mysql.sql: Add don_pings.counter.

2007-06-29  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* README: Change URL.

2007-06-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* Version 1.6.9.3