@@ -1,5 +1,8 @@
 2007-07-10  Akira TAGOH  <at@gclab.org>
 
+	* donrails/db/migrate/001_donrails1696.rb: Update to get this working
+	for PostgreSQL.
+
 	* donrails/app/helpers/application_helper.rb
 	(display_categories_roots_ul): Correct the controller.
 
